--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 @import "themeSelector.png.less";
 
 .accountPage-wrapper {
@@ -112,7 +112,7 @@
         margin-top: ~"calc(100% - 20px)";
         position: initial !important;
         background: @backgroundColorSpitballBlue;
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .portlet.light {
@@ -156,7 +156,7 @@
             border-bottom: 3px solid @borderColorBlue;
 
             > a {
-                color: @textColorWhite;
+                color: @textColorBlack;
             }
         }
 
@@ -277,7 +277,7 @@
         .requests {
             .user-name {
                 margin-left: 10px;
-                color: @textColorBlack;
+                color: @textColorWhite;
                 -ms-word-break: break-word;
                 word-break: break-word;
             }
