--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/components-rounded.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/components-rounded.less
@@ -1,5 +1,5 @@
 ﻿
-@import "themeLight.less";
+@import "variables.less";
 
 
 body {
@@ -8,7 +8,7 @@ body {
     margin: 0 !important;
     font-size: 13px;
     direction: ltr;
-    color: @textColorWhite;
+    color: @textColorBlack;
 }
 
 /*
@@ -2125,7 +2125,7 @@ Portlets
 }
 
 .portlet.light > .portlet-title > .caption {
-    color: @textColorWhite;
+    color: @textColorBlack;
 }
 //.portlet.light.bordered {
 //    border: 1px solid #e1e1e1 !important;
