--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 
 @feedActionsBackground: #d7dde0;
 @userImageIndent: 62px;
@@ -138,7 +138,7 @@
                 left: 0;
                 height: 40px;
                 top: 0;
-                background: @textColorWhite;
+                background: @textColorBlack;
                 width: ~"calc(100% - 1px)";
 
                 .title {
@@ -418,7 +418,7 @@
 
             > .top {
                 border-radius: 10px 10px 0 0;
-                color: @textColorWhite;
+                color: @textColorBlack;
             }
 
             .new-comment-border {
@@ -546,11 +546,11 @@
         }
 
         .user-name, .reply .user-name {
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
 
         .user-name {
-            color: @textColorWhite;
+            color: @textColorBlack;
             font-weight: 400;
             margin-top: 0;
             padding-bottom: 12px;
@@ -761,7 +761,7 @@
 
         > .content-text {
             overflow: hidden;
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
 
         > .actions-wrapper {
@@ -927,7 +927,7 @@
             md-icon {
                 width: @closeHeight;
                 height: @closeHeight;
-                fill: @textColorBlack;
+                fill: @textColorWhite;
             }
         }
     }
