--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 @actionsNavHeight: 60px;
 
 md-menu-item {
@@ -13,11 +13,11 @@ md-menu-item {
         background: @buttonColorBlue;
 
         .md-button span {
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
 
         svg {
-            fill: @textColorWhite;
+            fill: @textColorBlack;
         }
     }
 }
@@ -118,10 +118,10 @@ md-menu-item {
             &:hover, &.blue {
                 background: @buttonColorBlue;
                 border-color: @buttonColorBlue;
-                color: @textColorBlack;
+                color: @textColorWhite;
 
                 svg {
-                    fill: @textColorBlack;
+                    fill: @textColorWhite;
                 }
             }
         }
@@ -210,7 +210,7 @@ md-menu-item {
     }*/
     .fileName {
         text-align: center;
-        color: @textColorBlack;
+        color: @textColorWhite;
         font-size: 20px;
         white-space: nowrap;
         -ms-text-overflow: ellipsis;
@@ -225,7 +225,7 @@ md-menu-item {
             margin: 0 auto;
 
             h1 {
-                color: @textColorWhite;
+                color: @textColorBlack;
                 font-size: 20px;
                 margin: 0;
                 line-height: normal;
@@ -244,7 +244,7 @@ md-menu-item {
             max-width: 430px;
 
             .title {
-                color: @textColorWhite;
+                color: @textColorBlack;
             }
         }
 
@@ -258,7 +258,7 @@ md-menu-item {
             }
 
             input {
-                color: @textColorWhite;
+                color: @textColorBlack;
             }
         }
 
@@ -327,7 +327,7 @@ md-menu-item {
         }
 
         span {
-            color: @backgroundColorWhite;
+            color: @backgroundColorBlack;
         }
     }
 
@@ -360,13 +360,13 @@ md-menu-item {
     }
 
     .comments-wrapper {
-        color: @textColorBlack;
+        color: @textColorWhite;
     }
 
     .commentsMenu {
         width: 20px;
         height: 20px;
-        fill: @textColorBlack;
+        fill: @textColorWhite;
     }
 
     .comments-wrapper .menu-toggler {
@@ -495,7 +495,7 @@ md-menu-item {
         }
 
         .add-reply-wrapper {
-            background: @textColorBlack;
+            background: @textColorWhite;
             border-radius: 0 0 5px 5px;
             overflow: hidden;
 
@@ -557,7 +557,7 @@ md-menu-item {
             .comments-list > li {
                 border-radius: 5px;
                 margin: 16px 0;
-                background: @textColorBlack;
+                background: @textColorWhite;
                 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
             }
 
@@ -792,7 +792,7 @@ md-menu-item {
 
     img {
         max-width: 100%;
-        background: @backgroundColorWhite;
+        background: @backgroundColorBlack;
         margin: 10px 0;
     }
 }
