--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 @sideBarWidth: 250px;
 
 .page-header-fixed .page-container {
@@ -665,7 +665,7 @@ Page Loading
         .login-option {
             &.facebook, &.google {
                 width: 200px;
-                color: @textColorBlack;
+                color: @textColorWhite;
                 text-decoration: none;
                 margin-bottom: 20px;
                 font-size: 18px;
@@ -682,7 +682,7 @@ Page Loading
                     width: 25px;
                     height: 25px;
                     margin-left: 10px;
-                    fill: @textColorBlack;
+                    fill: @textColorWhite;
                 }
             }
 
@@ -711,7 +711,7 @@ Page Loading
         padding: 8px;
         border-radius: 16px;
         width: 200px;
-        color: @textColorBlack;
+        color: @textColorWhite;
         text-decoration: none;
         margin-bottom: 20px;
         font-size: 18px;
