--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 
 .leaderboard {
     width: 100%;
@@ -33,7 +33,7 @@
         overflow: hidden;
         white-space: nowrap;
         vertical-align: middle;
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .img-circle {
@@ -64,7 +64,7 @@
         &.last {
             text-align: right;
             white-space: nowrap;
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
     }
 }
