--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -1,5 +1,5 @@
 ﻿/* Set default body */
-@import "themeLight.less";
+@import "variables.less";
 
 .library {
     margin-bottom: 50px;
@@ -41,12 +41,12 @@
         position: relative;
 
         .status-title {
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
     }
 
     .department {
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .dots-3 {
@@ -89,7 +89,7 @@
     }*/
     .back-arrow {
         svg {
-            fill: @textColorWhite;
+            fill: @textColorBlack;
         }
     }
 
@@ -119,7 +119,7 @@
         .name {
             font-size: 22px;
             width: 100%;
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
 
         button {
