--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/profile.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/profile.less
@@ -1,5 +1,5 @@
 ﻿
-@import "themeLight.less";
+@import "variables.less";
 
 
 .profile-sidebar {
@@ -40,7 +40,7 @@
 }
 
 .profile-usertitle-name {
-    color: @textColorWhite;
+    color: @textColorBlack;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 0;
