--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -1,8 +1,8 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 
 .quizPage {
     .fullPageElelment();
-    color: @textColorWhite;
+    color: @textColorBlack;
     /*-webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -22,7 +22,7 @@
             font-size: 20px;
             margin-bottom: 10px;
             margin-top: 5px;
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
 
         .close {
@@ -187,15 +187,15 @@
     .retake {
         width: 100%;
         background: @buttonColorBlue;
-        color: @textColorBlack;
+        color: @textColorWhite;
         border-radius: 10px;
         padding: 2px 0;
         font-size: 24px;
     }
 
     .black-bullet {
-        background: @borderColorDarkGrey;
-        color: @textColorBlack;
+        background: @borderColorWhite;
+        color: @textColorWhite;
         text-align: center;
         border-radius: 10px;
         margin-bottom: 15px;
@@ -316,7 +316,7 @@
         textarea {
             width: 100%;
             margin-bottom: 10px;
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
     }
     //comment section
@@ -410,7 +410,7 @@
 
     .answer-selected {
         background: @backgroundColorSpitballBlue;
-        color: @textColorBlack;
+        color: @textColorWhite;
     }
 }
 
@@ -459,7 +459,7 @@
         margin: 25px auto;
         background: @backgroundColorMenu;
         border-radius: 10px;
-        color: @textColorWhite;
+        color: @textColorBlack;
         padding: 10px 20px;
 
         svg {
@@ -537,7 +537,7 @@
 
         .scared {
             background: @backgroundColor2;
-            color: @textColorBlack;
+            color: @textColorWhite;
         }
     }
 }
@@ -547,7 +547,7 @@
 }
 
 .quiz-wrapper {
-    color: @textColorWhite;
+    color: @textColorBlack;
     border-radius: 10px;
     background: #fff;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
@@ -574,7 +574,7 @@
         display: none;
         text-align: center;
         background: @backgroundColorRed;
-        color: @textColorBlack;
+        color: @textColorWhite;
         font-size: 20px;
     }
 
@@ -585,7 +585,7 @@
 
         .correct-answer {
             background: @backgroundColorSpitballBlue;
-            color: @textColorBlack;
+            color: @textColorWhite;
 
             &:before {
                 content: '\2714';
