--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/search.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/search.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 
 .search {
     .placeHolder(@textColorGrey);
@@ -43,7 +43,7 @@
             // text-align: justify;
             padding-left: 15px;
             line-height: 16px;
-            color: @textColorWhite;
+            color: @textColorBlack;
 
             h5 {
                 margin: 7px 0 12px 0;
@@ -96,7 +96,7 @@
 
         .wrapper {
             div {
-                color: @textColorBlack;
+                color: @textColorWhite;
             }
         }
 
