--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/themeLight.less
@@ -1,8 +1,8 @@
 ﻿@import "variables.less";
 
 
-@textColorBlack: #ffffff;
-@textColorWhite: #212325;
+@textColorBlack: #ffffff;///
+@textColorWhite: #212325;///
 @textColorGrey: #888b8e;
 @textColorDarkGrey: #ffffff;
 @textColorLightGrey: #c3c3c3;
@@ -19,8 +19,7 @@
 //backgrounds
 @backgroundColor: #dadada;
 @backgroundColor2: #9E9E9E;
-@backgroundColorWhite: #212325;
-@backgroundColorBlack: #ffffff;
+@backgroundColorWhite: #212325;///
 @backgroundColorMenu: #ffffff;
 @backgroundColorFollow: #006072;
 @backgroundColorItem: #6a737d;
@@ -37,9 +36,9 @@
 //borders
 @borderColorGrey: #3D4348;
 @borderColorLightGrey: #8c99a6;
-@borderColorDarkGrey: #ffffff;
-@borderColorWhite: #212325;
-@borderColorBlack: #282828;
+@borderColorDarkGrey: #ffffff;///
+@borderColorWhite: #212325;///
+@borderColorBlack: #282828;///
 @borderColorDarkBlue: #376E8C;
 @borderColorBlue: #3598dc;
 @borderColorSpitballBlue: #3293F6;
@@ -424,54 +423,4 @@ body.theme-light {
             }
         }
     }
-}
-
-
-.theme-light {
-    .themeClasses(TC1, @backgroundColorMenu, background text);
-    .themeClasses(TC2, @textColorLightGrey, border text svg);
-    .themeClasses(TC3, @buttonColorBlue, background);
-    .themeClasses(TC4, @textColorBlack, svg text border);
-    .themeClasses(TC5, @textColorGrey, border);
-    .themeClasses(TC6, @textColorBlue, svg);
-    .themeClasses(TC7, @color-beige, text);
-    .themeClasses(TC9,#F76446, text);
-    .themeClasses(TC10, @textColorGrey, text);
-    .themeClasses(TC11, @textColorGrey, svg);
-    .themeClasses(TC13, @textColorGrey, border);
-    .themeClasses(TC14, @textColorLightGrey, border);
-    .themeClasses(TC15, @backgroundColor2, svg);
-    .themeClasses(TC16, @textColorGrey, svg text);
-    .themeClasses(TC17, #dadce2, svg);
-    .themeClasses(TC18, @borderColorBottomGrey, hoverSvg);
-    .themeClasses(TC19, @buttonColorBlue, border background);
-    .themeClasses(TC20, #b2daef, text);
-    .themeClasses(TC21, #777777, background);
-    .themeClasses(TC22, #323538, svg);
-    .themeClasses(TC23, #ffffff, background);
-    .themeClasses(TC24, #e9eaed, border);
-    .themeClasses(TC25, #323538, text);
-    .themeClasses(TC26, @textColorBlack, text);
-    .themeClasses(TC27, #e9eaed, text);
-    .themeClasses(TC28, #29769e, hoverBackground);
-    .themeClasses(TC29, #ffffff, background);
-    .themeClasses(TC30, @textColorWhite, text background);
-    .themeClasses(TC31, #5f6871, svg);
-    .themeClasses(TC32, @textColorLightGrey, border);
-    .themeClasses(TC33, #f9f9f9, background);
-    .themeClasses(TC34, #8c99a6, background);
-    .themeClasses(TC35, @buttonColorBlue, text svg);
-    .themeClasses(TC36, #eee, background);
-    .themeClasses(TC37, #042E5E, background);
-    .themeClasses(TC38, @textColorLightGrey, svg);
-    .themeClasses(TC39, #f5f5f5, hoverBackground);
-    .themeClasses(TC40, @textColorLightGrey, svg);
-    .themeClasses(TC41, #eee, background);
-    .themeClasses(TC42, @textColorBlue, svg);
-    .themeClasses(TC43, #26566e, background);
-    .themeClasses(TC44, @textColorLightGrey, svg);
-    .themeClasses(TC45, #f5f5f5, border);
-    /*input[type="search"], textarea {
-        .placeHolder(@textColorGrey) !important;
-    }*/
 }
