--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 
 .userPage {
     .portlet {
@@ -9,7 +9,7 @@
     .portlet.box {
         background: #353a3f;
         text-transform: uppercase;
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .profile-usertitle-job {
@@ -30,13 +30,13 @@
         word-wrap: break-word;
         margin-right: 10px;
         margin-left: 10px;
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .message {
         font-size: 16px;
         background: @svgQuizRanking;
-        color: @textColorBlack;
+        color: @textColorWhite;
         padding: 3px 13px;
         border-radius: 8px;
         margin: 20px 0 9px 0;
@@ -52,7 +52,7 @@
             width: 22px;
             height: 22px;
             margin-right: 10px;
-            fill: @textColorBlack;
+            fill: @textColorWhite;
         }
     }
 
@@ -60,7 +60,7 @@
         text-align: center;
         margin-top: 7px;
         background: @backgroundColorSpitballBlue;
-        color: @textColorBlack;
+        color: @textColorWhite;
     }
 
     h5 {
@@ -79,7 +79,7 @@
         margin-top: 18px;
         line-height: 18px;
         padding-left: 13px;
-        color: @textColorWhite;
+        color: @textColorBlack;
 
         .earn {
             font-size: 16px;
@@ -174,7 +174,7 @@
             margin: 0 20px 0 10px;
             background: transparent;
             outline: none;
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
     }
 
@@ -186,7 +186,7 @@
         margin-bottom: 20px;
         .displayFlex();
         .align-items(center);
-        color: @textColorWhite;
+        color: @textColorBlack;
 
         > div {
             width: 100%;
