--- a/Zbang.Cloudents.Mvc4WebRole/Content/signin/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/signin/layout.less
@@ -5,7 +5,7 @@
 /*--------------------------------------------------
     [RGBA Opacity]
 ----------------------------------------------------*/
-@import "../Site/themeLight.less";
+@import "../Site/variables.less";
 
 @media print {
     body {
@@ -102,7 +102,7 @@ Page Header
 
 .page-header.navbar .page-logo .logo-default {
     margin: 16px 0 0 0;
-    fill: @textColorWhite;
+    fill: @textColorBlack;
 }
 
 .page-header.navbar .page-logo .logo-mini {
@@ -294,7 +294,7 @@ Page Header
     border-bottom: 6px solid #fff;
     border-left: 6px solid transparent;
     content: '';
-    border-bottom: 6px solid @borderColorWhite;
+    border-bottom: 6px solid @borderColorBlack;
 }
 
 .page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-menu > li > a {
