--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage.rtl.css
@@ -100,7 +100,7 @@
   padding: 8px;
   border-radius: 16px;
   width: 200px;
-  color: #f5f5f5;
+  color: #ffffff;
   text-decoration: none;
   margin-bottom: 20px;
   font-size: 18px;
@@ -146,7 +146,7 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  color: #f5f5f5;
+  color: #ffffff;
   display: inline-block;
   max-width: calc(100% - 300px);
 }
@@ -167,7 +167,7 @@
 }
 .homePage .home-page-body section.main .welcome-text > h1,
 .homePage .home-page-body section.main .welcome-text h2 {
-  text-shadow: -2px 2px 4px #282828;
+  text-shadow: -2px 2px 4px #212325;
 }
 .homePage .home-page-body section.main .welcome-text h1 {
   font-weight: bold;
@@ -236,7 +236,7 @@
 .homePage .home-page-body section.main .signin-options .login-option svg {
   width: 30px;
   height: 30px;
-  fill: #f5f5f5;
+  fill: #ffffff;
   z-index: 1;
 }
 @media (max-width: 460px) {
@@ -265,7 +265,7 @@
   justify-content: space-between;
   max-width: 700px;
   margin: 110px auto 0px auto;
-  color: #f5f5f5;
+  color: #ffffff;
   font-size: 18px;
   position: absolute;
   width: 100%;
@@ -286,7 +286,7 @@
 }
 .homePage .home-page-body section.main .statistics .statistic span {
   display: inline-block;
-  color: #f5f5f5;
+  color: #ffffff;
 }
 .homePage .home-page-body section.main .statistics .statistic a:hover span {
   color: #4190B9;
@@ -463,7 +463,7 @@
 }
 .homePage .home-page-body section.main .login-wrapper.login .content .create-account p,
 .homePage .home-page-body section.main .login-wrapper.login .content .login-account p {
-  color: #f5f5f5;
+  color: #ffffff;
   text-align: center;
   margin: 0 auto;
   align-self: center;
@@ -504,7 +504,7 @@
 .homePage .home-page-body section.main .login-wrapper.login .content .form-control {
   padding-left: 1em;
   background-color: #dde3ec;
-  color: #282828;
+  color: #212325;
   border-radius: 0;
   padding-right: 15px;
   border: 1px solid #c3c3c3;
@@ -588,7 +588,7 @@
   -webkit-flex-direction: row;
   flex-direction: row;
   align-items: center;
-  color: #f5f5f5;
+  color: #ffffff;
 }
 .homePage .home-page-body section.main .login-wrapper.login .form-group.sex > input,
 .homePage .home-page-body section.main .login-wrapper.login .form-group.sex label {
@@ -641,7 +641,7 @@
   color: #c3c3c3;
 }
 .homePage .home-page-body section.main .login-wrapper.login .content .check-email-message .text svg {
-  fill: #f5f5f5;
+  fill: #ffffff;
   width: 45px;
   height: 45px;
   margin-top: 25px;
@@ -751,7 +751,7 @@
 .homePage .home-page-body section.main .login-wrapper.login .content .create-account a,
 .homePage .home-page-body section.main .login-wrapper.login .content .login-account a {
   display: inline-block;
-  color: #f5f5f5;
+  color: #ffffff;
 }
 @media (max-width: 480px) {
   .homePage .home-page-body section.main .login-wrapper.login {
@@ -789,7 +789,7 @@
                         }*/
 }
 .homePage .home-page-body section.intro {
-  background: #f5f5f5;
+  background: #ffffff;
   overflow: visible;
   position: relative;
   padding-bottom: 0;
@@ -903,7 +903,7 @@
 }
 .homePage .home-page-body section.about {
   background: #4190B9;
-  color: #f5f5f5;
+  color: #ffffff;
   overflow: visible;
   position: relative;
   padding-bottom: 0;
@@ -958,12 +958,12 @@
   right: -20px;
 }
 .homePage .home-page-body section.check-us {
-  background: #181c1d;
-  color: #f5f5f5;
+  background: #dadada;
+  color: #ffffff;
   padding-bottom: 100px;
 }
 .homePage .home-page-body section.reviews {
-  background: #f5f5f5;
+  background: #ffffff;
   padding-top: 10px;
   overflow-x: hidden;
 }
@@ -996,12 +996,12 @@
   font-size: 36px;
   font-family: serif;
   font-style: initial;
-  color: #323538;
+  color: #ffffff;
 }
 .homePage .home-page-body section.reviews li .user-image {
   width: 110px;
   height: 110px;
-  border: 1px solid #282828;
+  border: 1px solid #212325;
   border-radius: 100%;
   margin: 0 auto;
 }
