--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.rtl.css
@@ -124,7 +124,7 @@
   padding: 8px;
   border-radius: 16px;
   width: 200px;
-  color: #f5f5f5;
+  color: #ffffff;
   text-decoration: none;
   margin-bottom: 20px;
   font-size: 18px;
@@ -166,7 +166,7 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  color: #f5f5f5;
+  color: #ffffff;
   display: inline-block;
   max-width: 800px;
   position: relative;
@@ -186,7 +186,7 @@
   position: absolute;
   background-color: #383838;
   background-size: cover;
-  border: 5px solid #f5f5f5;
+  border: 5px solid #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 @media (max-width: 960px) {
@@ -196,7 +196,7 @@
   }
 }
 .homePage .home-page-body section.main .welcome-text > h1 {
-  text-shadow: -2px 2px 4px #282828;
+  text-shadow: -2px 2px 4px #212325;
   font-weight: bold;
   width: 100%;
   margin: 14px auto;
@@ -255,7 +255,7 @@
   padding: 10px;
 }
 .homePage .home-page-body section.main .form-wrapper .form-title {
-  color: #f5f5f5;
+  color: #ffffff;
   padding: 27px 25px 0 25px;
   text-align: center;
   font-weight: 300;
@@ -327,7 +327,7 @@
 .homePage .home-page-body section.main .form-wrapper .signin-options .login-option .icon svg {
   width: 25px;
   height: 25px;
-  fill: #f5f5f5;
+  fill: #ffffff;
 }
 .homePage .home-page-body section.main .form-wrapper .signin-options .login-option .text {
   flex-grow: 1;
@@ -403,7 +403,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #f5f5f5;
+  color: #ffffff;
   background: #888b8e;
   font-size: 12px;
 }
@@ -413,7 +413,7 @@
   }
 }
 .homePage .home-page-body section.main .form-wrapper .bottom-strip a {
-  color: #f5f5f5;
+  color: #ffffff;
   text-decoration: underline;
 }
 .homePage .home-page-body section.main .form-wrapper .blue-button {
@@ -449,7 +449,7 @@
   cursor: pointer;
 }
 .homePage .home-page-body section.main .form-wrapper.register-wrapper label[for="show-fields"] {
-  color: #f5f5f5;
+  color: #ffffff;
   margin: 0 auto 30px auto;
   font-size: 20px;
   text-decoration: underline;
@@ -526,7 +526,7 @@
   padding-bottom: 135px;
 }
 .homePage .home-page-body section.main .form-wrapper.check-email-message-wrapper .text svg {
-  fill: #f5f5f5;
+  fill: #ffffff;
   width: 45px;
   height: 45px;
   margin-top: 25px;
@@ -536,7 +536,7 @@
   line-height: 22px;
 }
 .homePage .home-page-body section.main .form-wrapper.check-email-message-wrapper .text button {
-  color: #f5f5f5;
+  color: #ffffff;
   text-decoration: underline;
   background: none;
   border: none;
@@ -617,7 +617,7 @@
   display: flex;
   justify-content: space-between;
   margin: 110px auto 0px auto;
-  color: #f5f5f5;
+  color: #ffffff;
   font-size: 18px;
   position: absolute;
   width: 100%;
@@ -644,7 +644,7 @@
 }
 .homePage .home-page-body section.main .statistics .statistic span {
   display: inline-block;
-  color: #f5f5f5;
+  color: #ffffff;
 }
 .homePage .home-page-body section.main .statistics .statistic a:hover span {
   color: #4190B9;
@@ -801,7 +801,7 @@
 }
 .homePage .home-page-body section.about {
   background: #ffffff;
-  color: #282828;
+  color: #212325;
   overflow: visible;
   position: relative;
   padding-bottom: 0;
@@ -844,7 +844,7 @@
   margin: 0 0 10px;
 }
 .homePage .home-page-body section.about .description .features a {
-  color: #282828;
+  color: #212325;
   text-decoration: none;
 }
 .homePage .home-page-body section.about .description .features a:hover {
@@ -856,19 +856,19 @@
   right: -20px;
 }
 .homePage .home-page-body section.check-us {
-  background: #181c1d;
-  color: #f5f5f5;
+  background: #dadada;
+  color: #ffffff;
   padding-bottom: 100px;
 }
 .homePage .home-page-body section.check-us.no-boxes {
   display: none;
 }
 .homePage .home-page-body section.check-us.no-boxes ~ .about {
-  background: #181c1d;
-  color: #f5f5f5;
+  background: #dadada;
+  color: #ffffff;
 }
 .homePage .home-page-body section.check-us.no-boxes ~ .about .description {
-  color: #f5f5f5;
+  color: #ffffff;
   /*.features li {
                             font-size: 5vw;
                         }*/
@@ -880,7 +880,7 @@
   color: #4190b9;
 }
 .homePage .home-page-body section.reviews {
-  background: #f5f5f5;
+  background: #ffffff;
   padding-top: 10px;
   overflow-x: hidden;
 }
@@ -916,12 +916,12 @@
   font-size: 36px;
   font-family: serif;
   font-style: initial;
-  color: #323538;
+  color: #ffffff;
 }
 .homePage .home-page-body section.reviews li .user-image {
   width: 110px;
   height: 110px;
-  border: 1px solid #282828;
+  border: 1px solid #212325;
   border-radius: 100%;
   margin: 0 auto;
 }
