--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 
 .dashboard {
     /*.unibox {
@@ -69,7 +69,7 @@
         padding: 4px 9px;
         height: 24px;
         background-color: @backgroundColorRed;
-        color: @textColorBlack;
+        color: @textColorWhite;
     }
 
     .university {
@@ -90,7 +90,7 @@
             color: #fff;
             padding: 0 20px 6px;
             //align-self: auto;
-            color: @textColorBlack;
+            color: @textColorWhite;
 
             .uni-name {
                 font-size: 24px;
