--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/error.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/error.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 
 .error-page {
     width: 100%;
@@ -76,7 +76,7 @@
         }
 
         p {
-            color: @textColorWhite;
+            color: @textColorBlack;
             font-size: 20px;
             margin: 10px 0;
         }
@@ -102,7 +102,7 @@
             line-height: 30px;
             max-width: 570px;
             margin: 0 auto;
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
     }
 
@@ -119,7 +119,7 @@
 
                 a {
                     display: block;
-                    color: @textColorWhite;
+                    color: @textColorBlack;
                 }
             }
         }
