--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/light.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/light.less
@@ -2,7 +2,7 @@
 Theme Colors
 ***********/
 
-@import "themeLight.less";
+@import "variables.less";
 
 
 
@@ -32,27 +32,27 @@ Page Header
 }
 
 .page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-menu:before {
-    border-bottom-color: @borderColorWhite;
+    border-bottom-color: @borderColorBlack;
 }
 
 .page-header.navbar .top-menu .navbar-nav > li.separator {
-    background: @backgroundColorWhite;
+    background: @backgroundColorBlack;
 }
 
 .page-header.navbar .top-menu .navbar-nav > li.dropdown-extended .dropdown-menu {
-    border: 1px solid @borderColorWhite;
+    border: 1px solid @borderColorBlack;
 }
 
 .page-header.navbar .top-menu .navbar-nav > li.dropdown-extended .dropdown-menu:before {
-    border-bottom-color: @borderColorWhite;
+    border-bottom-color: @borderColorBlack;
 }
 
 .page-header.navbar .top-menu .navbar-nav > li.dropdown-extended .dropdown-menu:after {
-    border-bottom-color: @borderColorWhite;
+    border-bottom-color: @borderColorBlack;
 }
 
 .page-header.navbar .top-menu .navbar-nav > li.dropdown-extended .dropdown-menu > li.external {
-    background: @backgroundColorWhite;
+    background: @backgroundColorBlack;
 }
 
 .page-header.navbar .top-menu .navbar-nav > li.dropdown-extended .dropdown-menu > li.external > a {
@@ -68,7 +68,7 @@ Page Header
     }
 
     .page-header.navbar .top-menu .navbar-nav > li.dropdown-user > .dropdown-toggle > .username {
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .page-header.navbar .top-menu .navbar-nav > li.dropdown-dark .dropdown-menu {
@@ -148,7 +148,7 @@ Page Header
 
     .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li > a,
     .page-sidebar .page-sidebar-menu > li > a {
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li:hover > a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.open > a,
@@ -199,7 +199,7 @@ Page Header
     .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu li > a > .arrow:before, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu li > a > .arrow.open:before,
     .page-sidebar .page-sidebar-menu li > a > .arrow:before,
     .page-sidebar .page-sidebar-menu li > a > .arrow.open:before {
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu li:hover > a > .arrow:before, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu li:hover > a > .arrow.open:before,
@@ -216,7 +216,7 @@ Page Header
 
     .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu > li > a,
     .page-sidebar .page-sidebar-menu .sub-menu > li > a {
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu > li:hover > a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu > li.open > a, .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu .sub-menu > li.active > a,
