--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -1,4 +1,4 @@
-﻿@import "themeLight.less";
+﻿@import "variables.less";
 
 .page-sidebar-menu {
     .icon {
@@ -8,7 +8,7 @@
 
         md-icon {
             vertical-align: middle;
-            fill: @textColorWhite;
+            fill: @textColorBlack;
         }
     }
 
@@ -73,7 +73,7 @@
 
         md-content {
             .md-button {
-                color: @textColorWhite;
+                color: @textColorBlack;
 
                 span {
                     text-transform: capitalize;
